# kytok.org.ua-gtest-w-cmake-intro

./: CMakeLists.txt  LICENSE  README.md
tests-examples/: GTestsExamples.cpp
